# fastapi-psycopg2

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: configuraciones.py  dependencias.py  fechas.py  seguridad.py  utilidades.py
app/esquemas/: categoriagasto.py  gasto.py  token.py  usuario.py
app/modelos/: categoriagasto.py  gasto.py  usuario.py
app/rutas/: categoria.py  gasto.py  login.py  main.py  usuario.py
